fixed banner padding too large in chrome

--- a/static/sass/index.sass
+++ b/static/sass/index.sass
@@ -20,7 +20,7 @@ nav
     flex: 1.5
   #slogan-container
     margin: auto
-    padding: 6% 2.5% 6% 2.5%
+    padding: 2rem 2.5% 2rem 2.5%
     background-color: rgba(0, 0, 0, 0.6)
   h1
     flex: 1
